--- a/tests/unix/CMakeLists.txt
+++ b/tests/unix/CMakeLists.txt
@@ -13,17 +13,24 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-target_sources(multipass_tests
-  PRIVATE
-    ${CMAKE_CURRENT_LIST_DIR}/mock_libc_functions.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/test_daemon_rpc.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/test_platform_unix.cpp
+target_sources(multipass_tests PRIVATE
+  ${CMAKE_CURRENT_LIST_DIR}/mock_libc_functions.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/test_daemon_rpc.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/test_platform_unix.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/test_unix_terminal.cpp
 )
+
+target_compile_definitions(console_test PRIVATE
+  -Disatty=ut_isatty
+  -Dfileno=ut_fileno
+  -Dtcgetattr=ut_tcgetattr
+  -Dtcsetattr=ut_tcsetattr)
 
 target_compile_definitions(platform_test PRIVATE
   -Dgetgrnam=ut_getgrnam
 )
 
 target_link_libraries(multipass_tests
+  console_test
   platform_test
 )
